# pki_intermediate_ca

./: .gitignore  LICENSE  README.md
apache/: tls_vhost.conf
certs/: README.md
configs/: intermediate_ca.cnf  root_ca.cnf  san_ext.cnf
docs/: certificate_lifecycle.md  security_hardening.md  troubleshooting.md  trust_model.md
examples/c/: Makefile  verify_tls.c
examples/nodejs/: mtls_client.js  verify_tls.js
examples/python/: mtls_client.py  verify_tls.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
nginx/: tls_vhost.conf
scripts/: 01_build_root_ca.sh  02_build_intermediate_ca.sh  03_issue_server_cert.sh  04_issue_client_cert.sh  05_build_chain.sh  06_verify_chain.sh  07_revoke_cert.sh
tests/: test_chain.sh  test_revocation.sh  test_tls_handshake.sh
