[package]
name    = "pki-tls-verify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_tls"
path = "src/main.rs"

[dependencies]
reqwest  = { version = "0.12", features = ["rustls-tls", "json"] }
rustls   = "0.23"
tokio    = { version = "1",    features = ["full"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
